--- a/TelerikMovies/TelerikMovies.Web/TelerikMovies.Web.csproj
+++ b/TelerikMovies/TelerikMovies.Web/TelerikMovies.Web.csproj
@@ -421,6 +421,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Areas\Admin\Views\Movies\Edit.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
