Ready with design Start deleting unused methods

--- a/TelerikMovies/Data/MovieDb.Models/TelerikMovies.Models.csproj
+++ b/TelerikMovies/Data/MovieDb.Models/TelerikMovies.Models.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Abstracts\BaseInfoModel.cs" />
     <Compile Include="Contracts\IAuditable.cs" />
     <Compile Include="Contracts\IDeletable.cs" />
+    <Compile Include="Contracts\ITraceable.cs" />
     <Compile Include="MovieDb\Comments.cs" />
     <Compile Include="MovieDb\Dislikes.cs" />
     <Compile Include="MovieDb\Genres.cs" />
