--- a/TelerikMovies/TelerikMovies.Web/Web.config
+++ b/TelerikMovies/TelerikMovies.Web/Web.config
@@ -26,6 +26,10 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <customErrors mode="On" defaultRedirect="~/Error" redirectMode="ResponseRewrite">
+      <error redirect="~/Error/NotFound" statusCode="404"/>
+      <error redirect="~/Error" statusCode="500"/>
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
