--- a/TelerikMovies/TelerikMovies.Web/TelerikMovies.Web.csproj
+++ b/TelerikMovies/TelerikMovies.Web/TelerikMovies.Web.csproj
@@ -221,15 +221,13 @@
     <Compile Include="Models\Comment\CommentForMoviesViewModel.cs" />
     <Compile Include="Models\Comment\CreateCommentViewModel.cs" />
     <Compile Include="Models\Comment\DeleteCommentViewModel.cs" />
-    <Compile Include="Models\LikesDislikes\DislikeMovieViewModel.cs" />
-    <Compile Include="Models\Contracts\IVoteModel.cs" />
     <Compile Include="Models\Manage\IndexViewModel.cs" />
     <Compile Include="Models\Account\RegisterViewModel.cs" />
     <Compile Include="Areas\Admin\Models\GenreCreateViewModel.cs" />
     <Compile Include="Models\Manage\ChangePasswordViewModel.cs" />
     <Compile Include="Areas\Admin\Models\MovieCreateViewModel.cs" />
     <Compile Include="Models\Movie\DetailedMovieViewModel.cs" />
-    <Compile Include="Models\LikesDislikes\MovieLikeDislikeModel.cs" />
+    <Compile Include="Models\LikesDislikes\VoteViewModel.cs" />
     <Compile Include="Models\Movie\SimpleMovieViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
