Manage Controller finished tests

--- a/TelerikMovies/Common/Common.csproj
+++ b/TelerikMovies/Common/Common.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ManageMessageId.cs" />
     <Compile Include="ServicesNames.cs" />
     <Compile Include="DataTableOrderer.cs" />
     <Compile Include="Constants.cs" />
