--- a/TelerikMovies/TelerikMovies.Web/Web.config
+++ b/TelerikMovies/TelerikMovies.Web/Web.config
@@ -34,7 +34,7 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-    <customErrors mode="Off" defaultRedirect="~/Error" redirectMode="ResponseRewrite">
+    <customErrors mode="On" defaultRedirect="~/Error" redirectMode="ResponseRewrite">
       <error redirect="~/Error/NotFound" statusCode="404" />
       <error redirect="~/Error" statusCode="500" />
     </customErrors>
