--- a/TelerikMovies/TelerikMovies.IntegrationTests/TelerikMovies.IntegrationTests.csproj
+++ b/TelerikMovies/TelerikMovies.IntegrationTests/TelerikMovies.IntegrationTests.csproj
@@ -109,13 +109,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TelerikMoviesServices\CommentsServiceTests\SaveComment.cs" />
     <Compile Include="TelerikMoviesServices\GenresServiceTests\AddGenre.cs" />
+    <Compile Include="TelerikMoviesServices\GenresServiceTests\GetGenreByName.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{5efc2b50-32b1-4d4c-9401-274585fe9143}</Project>
